css/style.css
/*GLOBAL RESET*/
* { box-sizing: border-box; }
body {margin: 0;}

/* GLOBAL COLOR */
body { color: rbga(0, 0, 0, 0.8);}
a {color: rgb(77, 97, 78);}
a:hover {color: rgb(167, 191, 107);}

/* GLOBAL TYPOGRAPHY*/
body{
    font-family: Helvetica, Arial,  sans-serif;
    font-size: 88.75%; /* 14px */
    line-height: 1.4;
    color: rgb(74, 44, 13);
}

/*Header */
header {
    background-color: transparent;
    color: rgba(0, 0, 0, 0.8);
    padding: 1em;
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    position: absolute;
    width:100%;
}

header a{
    color: rgba(255, 255, 255, 0.8);
    text-decoration: none;
}

header a:hover {
    color: rgba(255, 255, 255, 1);
}

/* SITE ID */
.site-id h1 {
    margin: 0;
}

/* SITE NAV*/
.site-nav ul {
    display: flex;
    justify-content: flex-end;
    margin: 0;
    padding: 0;
    list-style: none;
}

.site-nav a{
    display: block;
    padding: 1em;
}

/* Footer */
footer {
    border-top: 1px soild rgba(0, 0, 0, .05);
    padding: 1em;
    background-color: black;
}

footer a {
    color:rgb(167, 191, 107);
}
footer a:hover {
    color: rgb(77, 97, 78);
}

/* MAIN */
main {
    background: rgba(0, 0, 0, .05);
}

/* SOCIAL NAV */
.social-nav ul {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    list-style: none;
}

.social-nav a {
    display: block;
    padding: 1em;
}

/* LAYOUT */
.container {
    max-width: 1000px;
    margin: 0 auto;
}

section {
    padding: 3em 1em;
}

/* SIDEBAR/ASIDE */
aside {
    padding: 2em 0;
}

@media (min-width: 768px) {
    .two-col-sidebar {
        display: grid;
        grid-template-columns: 20em auto;
    }
    .two-col-sidebar aside {
        border-right: 1px solid rgba(0, 0, 0, 0.1);
        margin: 0 3em 2em 0;
        padding: .3em 2em 0 0;
    }
}

/*HERO SECTION */
.hero {
    background-color: rgb(170, 142, 235);
    text-align: center;
    color: rgb(255, 255, 255);
    padding: 6em 1em;
}

.hero h2 {
    font-size: 6em;
    line-height: 1;
    text-transform: uppercase;
    margin: 0 auto;
}

.hero p{
    max-width: 30em;
    margin: 1em auto;
}

/* COURSE SECTION */
.courses {
    padding: 6em 1em;
    display: grid;
    justify-content: center;
}

.courses ul {
    margin: 0;
    padding: 0;
    list-style: none;
    text-align: center;
}

.courses h3 {
    text-align: center;
}

/* CUSTOM STYLING FOR SPECIFIC & SUB PAGE */
.page-sub .hero {
    background-image: url(../img/catbackground.jpg);
    color: rgba(255, 254, 254, 0.8);
    background-size: cover;
    background-position: center;
    padding: 20vh 1em;

}

.page-home .hero{
    background-image: url(../img/catbackground.jpg);
    background-size: cover;
    background-position: center;
    padding: 30vh 1em 20vh 1em;
}

.page-home header {
    background-color: transparent;
    position: absolute;
    width: 100%;
    
}

/* COURSE PAGES WITH MULTIPLE PROJECT LISTS */
.coursework {
    padding: 3em 1em;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.project {
    margin: 2em;
}

/* CODE BLOCKS */  

pre code {
    width: 100%;
    display: block;
    border: 1px solid #ddd;
    background-color: #fff;
    padding: 1em 3em;
    margin-bottom: 1em;
    line-height: 1.5;
    white-space: pre-wrap;
}

.markup-box {
    border: 1px soilid #ddd;
    border-radius: 5px;
    background-color: #fff;
    padding: 1em 3em;
    margin-bottom: 1em;
}

/* DEFINITION LISTS */
dt {
    font-weight: bold;
    margin-top: 1em;
}
dd {
    margin: 0;
}



/* ASSIGNMENT LISTS */
.project {
    margin: 3em;
}



/* FOR WEB DEV PURPOSES ONLY */
/* body, *{
    background-color; rgba(0,0,0,.05);
    border: 1px soild rgba(0,0,0,.1);
    color: rgba(0,0,0,.5);
} */

